tests/ui/shared/neighbor_stencil.stderr
error[RX3009]: cannot prove shared write/read is synchronized by a block barrier: read of shared `tile` may observe another lane's write not synchronized by `block.sync()`
 --> $DIR/shared/neighbor_stencil.rx:6:14
  |
6 |     dst[i] = tile[i + 1]; //~ ERROR RX3009
  |              ^^^^^^^^^^^ shared read not synchronized by a block barrier
